add_executable(test3_topic_server server.cc)
target_link_libraries(test3_topic_server PRIVATE lcz_rpc)

add_executable(test3_publish_client publish_client.cc)
target_link_libraries(test3_publish_client PRIVATE lcz_rpc)

add_executable(test3_subscribe_client subscribe_client.cc)
target_link_libraries(test3_subscribe_client PRIVATE lcz_rpc)

